--- a/Array_And_D_Array.ipynb
+++ b/Array_And_D_Array.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9svcjCPkGnBz+diCg1DlE",
+      "authorship_tag": "ABX9TyPPohhOJcMUBv4C8s6jJehH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,7 +169,7 @@
         "                arr[i] = arr[i+1];\n",
         "            }\n",
         "        }\n",
-        "        arr[last]= -1;\n",
+        "        arr[Size-1]= -1;\n",
         "        Size--;\n",
         "        if(Size <= Capacity / 2)\n",
         "        {\n",
@@ -198,7 +198,7 @@
         "\n",
         "    void clear()\n",
         "    {\n",
-        "        //this->~dynamicArray(); //dangling pointer never use this\n",
+        "        //this->~dynamicArray(); //dangling pointer\n",
         "        delete[] arr;\n",
         "        arr = nullptr;\n",
         "        Size = 0;\n",
