--- a/circular_priority.ipynb
+++ b/circular_priority.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfVY+kOAo5DZjtR1RBxNk0",
+      "authorship_tag": "ABX9TyMk+DmodDF2rWNkp/a7KdOC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,7 @@
         "============================= Circular Priority Queue ==========================\n",
         "\n",
         "```\n",
+        "\n",
         "#include<iostream>\n",
         "using namespace std;\n",
         "\n",
@@ -58,7 +59,6 @@
         "            return;\n",
         "        }\n",
         "\n",
-        "\n",
         "        if(front == -1 && rear == -1)\n",
         "        {\n",
         "            front = 0;\n",
@@ -82,7 +82,6 @@
         "        size++;\n",
         "    }\n",
         "\n",
-        "\n",
         "    void pop()\n",
         "    {\n",
         "        if (size == 0)\n",
@@ -102,7 +101,6 @@
         "        }\n",
         "    }\n",
         "\n",
-        "\n",
         "    void getQue()\n",
         "    {\n",
         "        if (size == 0)\n",
@@ -116,14 +114,11 @@
         "        {\n",
         "            cout << arr[(front + i) % capacity] << \" \";\n",
         "        }\n",
-        "\n",
         "        cout << endl;\n",
-        "        cout << \"Size: \" << size << \", Capacity: \" << capacity << endl;\n",
+        "        cout << \"Size: \" << size << \" Capacity: \" << capacity << endl;\n",
         "        //cout << \"Rear: \" << rear << \", Front: \" << front << endl;\n",
         "    }\n",
-        "\n",
         "};\n",
-        "\n",
         "\n",
         "int main()\n",
         "{\n",
@@ -133,12 +128,11 @@
         "    cout << \"===============================================\" << endl;\n",
         "    cout << \"Enter 1 -> To insert the element\" << endl;\n",
         "    cout << \"Enter 2 -> To display the queue\" << endl;\n",
-        "    cout << \"Enter 4 -> To delete front of the queue\" << endl;\n",
+        "    cout << \"Enter 3 -> To delete element of queue\" << endl;\n",
         "    cout << \"===============================================\" << endl;\n",
         "\n",
         "    PriorityCircular pc;\n",
         "    int choice;\n",
-        "\n",
         "    while(true)\n",
         "    {\n",
         "        cout << endl\n",
@@ -164,16 +158,12 @@
         "            default:\n",
         "                cout << \"Invalid choice ! Try again \" << endl;\n",
         "                break;\n",
-        "\n",
-        "\n",
         "        }\n",
-        "\n",
         "    }\n",
-        "\n",
-        "\n",
-        "\n",
         "    return 0;\n",
         "}\n",
+        "\n",
+        "\n",
         "```"
       ],
       "metadata": {
